objects/DandB_PossibleMatchAddress__c.object
<CustomObject>
    <fields>
        <fullName>DandB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DandB</label>
        <referenceTo>DandB__c</referenceTo>
        <relationshipLabel>DandB_PossibleMatchAddress</relationshipLabel>
        <relationshipName>DandB_PossibleMatchAddress</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>possibleMchBuildingName2__c</fullName>
        <label>possibleMchBuildingName2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchBuildingName__c</fullName>
        <label>possibleMchBuildingName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchCity__c</fullName>
        <label>possibleMchCity</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchIsCurrent__c</fullName>
        <label>possibleMchIsCurrent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchIsMailing__c</fullName>
        <label>possibleMchIsMailing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchIsPriorAddress__c</fullName>
        <label>possibleMchIsPriorAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchPostcode__c</fullName>
        <label>possibleMchPostcode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchRecordedDay__c</fullName>
        <label>possibleMchRecordedDay</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchRecordedYear__c</fullName>
        <label>possibleMchRecordedYear</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchState__c</fullName>
        <label>possibleMchState</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchStreetNo__c</fullName>
        <label>possibleMchStreetNo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchStreetType__c</fullName>
        <label>possibleMchStreetType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchStreet__c</fullName>
        <label>possibleMchStreet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchUnitNo__c</fullName>
        <label>possibleMchUnitNo</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>DandB_PossibleMatchAddress</label>
    <nameField>
        <label>DandB_PossibleMatchAddress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DandB_PossibleMatchAddress</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>